# precision-weighting-serial-dependence

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/combined/: 2_Supplementary_Figures.ipynb  3_Supplementary_Figures.ipynb  generate_main_figures.py  generate_supplementary_figures.py
analysis/experiment1/: 2_CT_SD_Analysis.ipynb  3_CT_SD_Analysis.ipynb  3_LMM_Models.ipynb  4_LMM_Models.ipynb  lmm_model_comparison.csv
analysis/experiment2/: 3_CT_SD_Analysis.ipynb  3_LMM_Models.ipynb  4_LMM_Models.ipynb  lmm_model_comparison.csv
data/experiment1/: E1.pkl  S01_Exp1.csv  S02_Exp1.csv  S03_Exp1.csv  S04_Exp1.csv  S05_Exp1.csv  S06_Exp1.csv  S07_Exp1.csv  S08_Exp1.csv  S09_Exp1.csv  S10_Exp1.csv  S11_Exp1.csv  S12_Exp1.csv  S13_Exp1.csv  S14_Exp1.csv  S15_Exp1.csv  S16_Exp1.csv  S17_Exp1.csv  S18_Exp1.csv  S19_Exp1.csv  S20_Exp1.csv  S21_Exp1.csv  S22_Exp1.csv  S23_Exp1.csv  S24_Exp1.csv  S25_Exp1.csv  S26_Exp1.csv  S27_Exp1.csv  S28_Exp1.csv  S29_Exp1.csv  S30_Exp1.csv  S31_Exp1.csv  S32_Exp1.csv  S33_Exp1.csv  S34_Exp1.csv  S35_Exp1.csv  S36_Exp1.csv  S37_Exp1.csv  S38_Exp1.csv  S39_Exp1.csv  (+4 more)
data/experiment2/: E2.pkl  S01_Exp2.csv  S02_Exp2.csv  S03_Exp2.csv  S04_Exp2.csv  S05_Exp2.csv  S06_Exp2.csv  S07_Exp2.csv  S08_Exp2.csv  S09_Exp2.csv  S10_Exp2.csv  S11_Exp2.csv  S12_Exp2.csv  S13_Exp2.csv  S14_Exp2.csv  S15_Exp2.csv  S16_Exp2.csv  S17_Exp2.csv  S18_Exp2.csv  S19_Exp2.csv  S20_Exp2.csv  S21_Exp2.csv  S22_Exp2.csv  S23_Exp2.csv  S24_Exp2.csv  S25_Exp2.csv  S26_Exp2.csv  S27_Exp2.csv  (+44 more)
modeling/: 1_135Model_ThreeState.ipynb
shared/: plot_config.py
(+8 files in other folders)
