[project]
name = "serial-dependence-uncertainty"
version = "0.1.0"
description = "Kalman filter analysis of serial dependence under uncertainty"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # Statistical analysis
    "pingouin>=0.5.0",
    "statsmodels>=0.14.0",

    # Plotting and visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Jupyter notebook support
    "ipykernel>=6.25.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "nbconvert>=7.0.0",

    # Additional utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[tool.uv]
# Use the project's local .venv directory
managed = true

# For research projects without installable packages
# No build-system needed - just dependency management

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
